change xsd schema for exclude; implemented exclude by area functionality